# fastapi-demo

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.actions/workflows/: CI.yaml
.github/actions/setup-python-uv/: action.yml
.github/actions/setup-uv/: action.yaml  action.yml
.github/workflows/: CI.yaml  build.yml  cd.yml  ci.yml  validate.yml
alembic/: env.py
alembic/versions/: 99e79b863262_initial_schema.py  bfe6601a91ca_initial_schema.py
api/v1/: health_controller.py  student_controller.py
core/: config.py  database.py  exceptions.py
db_init/: init.sql
dependencies/: health.py  student.py
model/dao/: student.py
model/dto/: student.py
repositories/: student_repository.py
services/: health_service.py  student_service.py
tests/unit/: test_student_controller.py  test_student_service.py
