[project]
name = "fastapi-demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.119.1",
    "httpx==0.28.1",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.3",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "ruff==0.15.13",
]
